changes made on controllers: createCharacter - added validate valuesname, age, episodes(check if value exist).  updateCharacter - controller to update character data, validating input, normalizing roles, and preventing duplicate episodes or rules. removeEpisodesFromCharacter controller to delete specified episodes from a character after validating their existance. createEpisode validates required fields and character existance before creating an episode. updateEpisode updates episode data, adding new characters without duplicates. removeCharactersFromEpisode - removes specified characters from an episode.

--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "episodes.seeds": "node ./utils/Seeds/episodes.seeds.js"
+    "seed:episodes": "node data/seedEpisodes.js",
+    "seed:characters": "node data/seedCharacters.js",
+    "seed:all": "npm run seed:episodes && npm run seed:characters"
   },
   "keywords": [],
   "author": "",
